--- a/roles/oidc-extension/templates/oidc-resolver-predicates.xml
+++ b/roles/oidc-extension/templates/oidc-resolver-predicates.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<beans xmlns="http://www.springframework.org/schema/beans"
-    xmlns:util="http://www.springframework.org/schema/util" xmlns:p="http://www.springframework.org/schema/p"
-    xmlns:c="http://www.springframework.org/schema/c" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<beans xmlns="http://www.springframework.org/schema/beans" xmlns:util="http://www.springframework.org/schema/util"
+    xmlns:p="http://www.springframework.org/schema/p" xmlns:c="http://www.springframework.org/schema/c" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
                         http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context.xsd
                         http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd">
@@ -9,46 +8,30 @@
 
     <!-- This file contains predicates for oidc attribute encoding purposes. -->
 
-    <!-- UserInfoPredicate & IDTokenPredicate are meant to implement claim 
-        splitting by activating encoders in attribute resolver -->
+    <!-- UserInfoPredicate & IDTokenPredicate are meant to implement claim splitting by activating encoders in attribute 
+        resolver -->
 
-    <!-- This predicate returns true if we are encoding attribute for userinfo 
-        response. Having this predicate as encoder activation condition ensures the 
-        claim is encoded only for userinfo response. -->
+    <!-- This predicate returns true if we are encoding attribute for userinfo response. Having this predicate as encoder 
+        activation condition ensures the claim is encoded only for userinfo response. -->
 
-    <bean id="UserInfoPredicate" class="com.google.common.base.Predicates"
-        factory-method="and">
-        <constructor-arg>
-            <bean
-                class="net.shibboleth.utilities.java.support.logic.StrategyIndirectedPredicate">
-                <constructor-arg name="objectStrategy">
-                    <bean
-                        class="org.opensaml.profile.context.navigate.ProfileIdLookup" />
-                </constructor-arg>
-                <constructor-arg name="collection">
-                    <ref bean="UserInfoProfiles" />
-                </constructor-arg>
-            </bean>
+    <bean id="UserInfoPredicate" class="net.shibboleth.utilities.java.support.logic.StrategyIndirectedPredicate">
+        <constructor-arg name="objectStrategy">
+            <bean class="org.opensaml.profile.context.navigate.ProfileIdLookup" />
+        </constructor-arg>
+        <constructor-arg name="collection">
+            <ref bean="UserInfoProfiles" />
         </constructor-arg>
     </bean>
 
-    <!-- This predicate returns true if we are encoding attribute for id 
-        token. Having this predicate as encoder activation condition ensures the 
-        claim is encoded only for id token. -->
+    <!-- This predicate returns true if we are encoding attribute for id token. Having this predicate as encoder activation 
+        condition ensures the claim is encoded only for id token. -->
 
-    <bean id="IDTokenPredicate" class="com.google.common.base.Predicates"
-        factory-method="and">
-        <constructor-arg>
-            <bean
-                class="net.shibboleth.utilities.java.support.logic.StrategyIndirectedPredicate">
-                <constructor-arg name="objectStrategy">
-                    <bean
-                        class="org.opensaml.profile.context.navigate.ProfileIdLookup" />
-                </constructor-arg>
-                <constructor-arg name="collection">
-                    <ref bean="IDTokenProfiles" />
-                </constructor-arg>
-            </bean>
+    <bean id="IDTokenPredicate" class="net.shibboleth.utilities.java.support.logic.StrategyIndirectedPredicate">
+        <constructor-arg name="objectStrategy">
+            <bean class="org.opensaml.profile.context.navigate.ProfileIdLookup" />
+        </constructor-arg>
+        <constructor-arg name="collection">
+            <ref bean="IDTokenProfiles" />
         </constructor-arg>
     </bean>
 
