spelling error fixed

--- a/roles/oidc-extension/templates/index.html
+++ b/roles/oidc-extension/templates/index.html
@@ -3,7 +3,7 @@
     <body>
         <h1>Self Test for RPless People</h1>
         <p>
-            Test link performs all possible phase: webfinger, dynamic registration and code flow using scope openid+email.     
+            Test link performs all possible phases: webfinger, dynamic registration and code flow using scope openid+email.     
         </p>
         <p>
         <ul>
