--- a/roles/oidc-extension/templates/relying-party.xml
+++ b/roles/oidc-extension/templates/relying-party.xml
@@ -25,6 +25,7 @@
         <property name="profileConfigurations">
             <list>
             <bean parent="OIDC.Registration" />
+            <bean parent="OIDC.Configuration" />
             </list>
         </property>
     </bean>
